# mcp-browser-co-gnome

./: .env.example  .gitignore  CLAUDE.md  Caddyfile.gateway  README.md  config.yml.example  docker-compose.yml  mcp_config.example.json  pyproject.toml
docker/browser/: Dockerfile  requirements.txt  start_chromium.sh  supervisord.conf  x11_capture_service.py
docker/gui-actor/: Dockerfile  server.py
docker/gui-actor/gui_actor/: modeling_qwen25vl.py  trainer.py
docker/omniparser/: Dockerfile  server.py
docker/vlm/: Dockerfile  download_models.sh  entrypoint.sh
examples/: basic_usage.py  natural_language_click.py  remote_access.py  session_persistence.py
src/novnc_automation/: __init__.py  browser.py  config.py  docker.py  input_capture.py  mcp_server.py  ml_services.py  recording.py  session.py  tunnel.py
src/novnc_automation/models/: __init__.py  session_state.py
tests/: test_config.py  test_ml_services.py  test_models.py  test_recording.py  test_session.py
